--- a/04. Introduction to Corporate Finance/Module 1 Time Value of Money/1.2 Compounding.md
+++ b/04. Introduction to Corporate Finance/Module 1 Time Value of Money/1.2 Compounding.md
@@ -1,54 +1,96 @@
-### 视频总结：Week 1 - 货币的时间价值（Time Value of Money）
+## Coursera 商业基础课程《企业财务导论》 - 模块1 - 货币的时间价值
 
-#### **核心概念**
-1. **复利（Compounding）的定义**  
-   • **目的**：将现金流从当前或过去的时间点移动到未来某一时间点，计算其未来价值（Future Value, FV）。
-   • **对比贴现（Discounting）**：贴现将未来现金流折现到当前（现值），复利则是将当前或过去的现金流复利至未来（终值）。
+### 课程1.2 复利
 
-2. **复利因子（Compounding Factor）**  
-   • 公式：\( \text{复利因子} = (1 + R)^t \)，其中：
-     ◦ \( R \) = 利率（与贴现率相同，反映资本的机会成本和风险）
-     ◦ \( t \) = 时间跨度（向前推移的期数）
-   • **操作方向**：复利因子指数为正（\( +t \)），贴现因子指数为负（\( -t \)）。
+#### 1. 核心概念
 
-3. **未来值（Future Value, FV）**  
-   • 定义：当前或过去现金流在未来某一时点的等效价值，通过复利因子计算。
-   • 公式：\( FV = CF \times (1 + R)^t \)
-   • **应用示例**：
-     ◦ **单笔投资**：当前投资$1,000（R=3.5%），3年后的未来值为$1,108.72。
-     ◦ **多期储蓄**：每年存入$100（共3年），4年后的总未来值为$452.56（R=5%）。
+1. **复利（Compounding）的本质**  
+   1. 复利是将当前或未来的现金流**向前移动**至某一未来时点的过程，与贴现（Discounting）互为逆操作。  
+   2. **工具**：使用**复利因子**（即贴现因子的正指数形式）转换时间单位，公式为：  
+     \[
+     \text{复利因子} = (1+R)^t
+     \]
+     其中，`R`为利率，`t`为向前移动的期数。
 
-4. **时间线的灵活应用**  
-   • 可选择任意时间点（如第2年）作为基准，将其他现金流通过贴现或复利转换到该点，统一时间单位后相加。
+2. **未来价值（Future Value, FV）**  
+   1. 未来价值表示当前或分阶段现金流在某一未来时点的汇总价值，所有现金流需通过复利转换至同一时间单位后相加。
+
+#### 2. 关键规则与操作
+
+1. **复利计算步骤**  
+   1. **步骤1**：绘制时间轴，明确各期现金流（CF₀, CF₁, ..., CFₙ）的时点与方向。  
+   2. **步骤2**：对每笔现金流应用复利因子，公式为：  
+     \[
+     FV_t = CF_k \times (1+R)^{t-k}
+     \]
+     其中，`k`为现金流原始时点，`t`为目标未来时点。  
+   3. **步骤3**：汇总所有转换后的现金流，得到总未来价值。
+
+2. **时间轴的灵活性**  
+   1. 现金流可移动到**任意目标时点**（如示例中的第4年或第2年），只需保持计算一致性。
+
+#### 3. 实例应用
+
+1. **单笔投资的未来价值**  
+   1. **问题**：当前投资\$1,000，年利率3.5%，3年后价值多少？  
+   2. **解答**：  
+     \[
+     FV_3 = 1000 \times (1+0.035)^3 \approx 1,108.72
+     \]
+   3. **结论**：3年后价值为\$1,108.72。
+
+2. **多期储蓄的未来价值**  
+   1. **问题**：每年初存入\$100，连续4年，年利率5%，第4年末账户余额多少？  
+   2. **步骤**： 
+      1. 时间轴：第0、1、2、3年存入\$100，目标时点为第4年末。  
+      2. 计算每笔存款的复利：  
+       \[
+       \begin{align*}
+       FV_4 (\text{第0年存款}) &= 100 \times (1.05)^4 \approx 121.55 \\
+       FV_4 (\text{第1年存款}) &= 100 \times (1.05)^3 \approx 115.76 \\
+       FV_4 (\text{第2年存款}) &= 100 \times (1.05)^2 \approx 110.25
+       \\
+       FV_4 (\text{第3年存款}) &= 100 \times (1.05)^1 \approx 105.00 \\
+       \end{align*}
+       \]
+      3. 总未来价值：  
+       \[
+       121.55 + 115.76 + 110.25 + 105.00 = 452.56
+       \]
+   3. **结论**：第4年末账户余额为\$452.56。
+
+#### 4. 扩展理解
+
+1. **动态复利过程**  
+   1. 以多期储蓄为例，每年末计算利息并累加存款：  
+      1. **第1年末**：\$100 × 1.05 = \$105 → 存入\$100 → 余额\$205  
+      2. **第2年末**：\$205 × 1.05 ≈ \$215.25 → 存入\$100 → 余额\$315.25  
+      3. **第3年末**：\$315.25 × 1.05 ≈ \$331.01 → 存入\$100 → 余额\$431.01  
+      4. **第4年末**：\$431.01 × 1.05 ≈ \$452.56  
+   2. 验证分步计算与直接复利公式的一致性。
+
+2. **复利与贴现的关系**  
+   1. 复利（正向移动）与贴现（逆向移动）使用同一贴现因子，仅指数符号不同：  
+     \[
+     \text{复利因子} = (1+R)^t, \quad \text{贴现因子} = \frac{1}{(1+R)^t}
+     \]
 
 ---
 
-#### **关键结论**
-1. **复利与贴现的对称性**  
-   • 复利和贴现是货币时间价值的双向操作：复利向前计算终值，贴现向后计算现值，两者通过利率 \( R \) 关联。
+#### 关键结论
 
-2. **未来值的多重解释**  
-   • 未来值代表当前投资的终值，或未来某一时点的财富累积总额。
-   • 示例中$452.56可视为：每年存入$100（共3年）并持续复利至第4年的总金额，或该储蓄计划的终值。
-
-3. **时间线的重要性**  
-   • 时间线是可视化工具，明确标注每期现金流的流入/流出时间和金额，避免时间单位混淆。
-   • **规则**：必须将所有现金流转换到同一时间点后再进行加减运算。
-
-4. **动态过程验证**  
-   • 复利过程可通过逐年计算利息和本金验证。例如，$100存入后每年赚取5%利息，逐年叠加存款和利息，最终验证终值准确性。
-
-5. **利率（R）的假设**  
-   • 默认利率在时间维度上恒定，但现实中可能变化（后续课程将涉及利率曲线和期限结构）。
+1. **复利是时间价值的核心工具**：用于计算当前或分阶段投资在未来时点的累积价值。  
+2. **操作要点**：  
+   1. 始终通过时间轴明确现金流时序。  
+   2. 复利计算需统一所有现金流至同一未来时点。  
+3. **应用场景**：储蓄计划、长期投资回报预测、分期存款终值计算等。
 
 ---
 
-#### **下一步学习方向**
-下一讲将讨论**常见现金流的现值与终值计算捷径**（如年金、永续年金），简化多期均匀现金流的计算流程，提升效率。复利与贴现的结合将构建完整的货币时间价值分析框架。
+### 附录：字幕
 
-## Prompt
-
-下面提供 Coursera Business Foundations 系列课程的第四课 Introduction to Corporate Finance 的视频 subtitle 及 slide，请用中文对该视频进行总结并提炼关键结论
+```
+下面提供 Coursera Business Foundations 系列课程的第四课 Introduction to Corporate Finance 的视频 subtitle 及 slide，请用中文对该视频小节进行总结并提炼关键结论
 
 ## 模块标题：Week 1: Time Value of Money
 
@@ -95,3 +137,4 @@ And by applying a discount factor rates to a negative value, I can move the cash
 So what I wanna see you do now is work on the problem set.
 
 And then, coming up next in our next lecture, I want to talk about some useful shortcuts for present value and future value of common streams of cash flows. So, thanks again for listening, and I look forward to seeing you in the next lecture.
+```
