--- a/04. Introduction to Corporate Finance/Module 1 Time Value of Money/1.3 Useful Shortcuts.md
+++ b/04. Introduction to Corporate Finance/Module 1 Time Value of Money/1.3 Useful Shortcuts.md
@@ -1,73 +1,120 @@
-### 视频总结：Week 1 - 货币的时间价值（Time Value of Money）
+## Coursera 商业基础课程《企业财务导论》 - 模块1 - 货币的时间价值
 
-#### **核心概念**
+### 课程1.3 快捷公式
+
+#### 1. 核心概念
+
 1. **年金（Annuity）**  
-   • **定义**：等额、定期、有限期的现金流序列（如房贷、保险年金）。  
-   • **现值公式**：  
-     \[
-     PV = \frac{CF}{R} \left[ 1 - \frac{1}{(1+R)^T} \right]
-     \]
-     ◦ \( CF \) = 每期现金流，\( R \) = 贴现率，\( T \) = 期数。  
-   • **应用示例**：为未来20年每年提取$100（R=5%），需今日存入$1,246.22。
+   1. **定义**：等额、定期、有限期的现金流序列（如房贷还款、养老金）。  
+   2. **特征**：  
+      1. 每期现金流金额相同（CF₁=CF₂=...=CFₙ）。  
+      2. 现金流间隔相等（如年、月）。  
+      3. 有限期数（T期）。  
+   3. **关键假设**：首笔现金流发生在第1期末（而非当前时点）。
 
-2. **增长型年金（Growing Annuity）**  
-   • **定义**：每期现金流以固定增长率（\( g \)）递增的有限期现金流（如工资增长储蓄计划）。  
-   • **现值公式**：  
-     \[
-     PV = \frac{CF}{R - g} \left[ 1 - \frac{(1+g)^T}{(1+R)^T} \right]
-     \]
-   • **应用示例**：提取每年增长2.5%的现金流（首年$100，R=5%，20年），需今日存入$1,529.69。
+2. **永续年金（Perpetuity）**  
+   1. **定义**：无限期的等额、定期现金流（如英国统一公债）。  
+   2. **特征**：  
+      1.  现金流无限延续，无终止日期。  
+      2. 公式适用条件：首笔现金流在第1期末。
 
-3. **永续年金（Perpetuity）**  
-   • **定义**：等额、定期、无限期的现金流序列（如英国永续债券）。  
-   • **现值公式**：  
-     \[
-     PV = \frac{CF}{R}
-     \]
-   • **应用示例**：无限期每年提取$100（R=5%），需今日存入$2,000（因远期现值趋近于0）。
+3. **增长型年金与永续年金**  
+   1. **增长年金（Growing Annuity）**：有限期、定期、现金流以固定增长率（g）递增。  
+   2. **增长永续年金（Growing Perpetuity）**：无限期、定期、现金流以固定增长率（g）递增（如股息增长模型）。  
+   3. **关键约束**：增长率（g）必须小于贴现率（R），否则现值趋于无限大。
 
-4. **增长型永续年金（Growing Perpetuity）**  
-   • **定义**：每期现金流以固定增长率（\( g \)）递增的无限期现金流（如股息）。  
-   • **现值公式**：  
+#### 2. 关键公式与规则
+
+1. **普通年金现值公式**  
+   \[
+   PV_{\text{年金}} = \frac{CF}{R} \left[ 1 - \frac{1}{(1+R)^T} \right] = CF \times \frac{1 - (1 + R)^{-T}}{R}
+   \]
+
+   1. **应用场景**：计算等额分期支付（如贷款还款、储蓄计划）的当前总成本或需储蓄金额。
+
+2. **永续年金现值公式**  
+   \[
+   PV_{\text{永续年金}} = \frac{CF}{R}
+   \]
+
+   1. **应用场景**：评估无限期稳定收益资产的价值（如永续债券）。
+
+3. **增长年金现值公式**  
+   \[
+   PV_{\text{增长年金}} = \frac{CF_1}{R-g} \left[ 1 - \left( \frac{1+g}{1+R} \right)^T \right]
+   \]
+
+   1. **注意**：CF₁为首期现金流（已含增长），g为每期增长率。
+
+4. **增长永续年金现值公式**  
+   \[
+   PV_{\text{增长永续年金}} = \frac{CF_1}{R-g}
+   \]
+
+   1. **应用场景**：估值持续增长的企业股息或长期收入流。
+
+#### 3. 实例应用
+
+1. **普通年金计算**  
+   1. **问题**：每年末提取\$100，持续20年（年利率5%），当前需存入多少？  
+   2. **计算**：  
      \[
-     PV = \frac{CF_1}{R - g} \quad (\text{需满足} \, R > g)
+     PV = \frac{100}{0.05} \left[ 1 - \frac{1}{(1.05)^{20}} \right] \approx 1,246.22
      \]
-   • **应用示例**：提取每年增长2.5%的无限期现金流（首年$100，R=5%），需今日存入$4,000。
+   3. **结论**：当前需存入\$1,246.22。
+
+2. **增长年金计算**  
+   1. **问题**：首年提取\$100，之后每年增长2.5%，持续20年（年利率5%），当前需存入多少？  
+   2. **计算**：  
+     \[
+     PV = \frac{100}{0.05-0.025} \left[ 1 - \left( \frac{1.025}{1.05} \right)^{20} \right] \approx 1,529.69
+     \]
+   3. **结论**：当前需存入\$1,529.69。
+
+3. **永续年金计算**  
+   1. **问题**：每年末无限期提取\$100（年利率5%），当前需存入多少？  
+   2. **计算**：  
+     \[
+     PV = \frac{100}{0.05} = 2,000
+     \]
+   3. **结论**：当前需存入\$2,000。
+
+4. **增长永续年金计算**  
+   1. **问题**：首年提取\$100，之后每年增长2.5%（年利率5%），当前需存入多少？  
+   2. **计算**：  
+     \[
+     PV = \frac{100}{0.05-0.025} = 4,000
+     \]
+   3. **结论**：当前需存入\$4,000。
+
+#### 4. 扩展理解
+
+1. **公式适用性验证**  
+   1. **时间对齐**：确保现金流起始时点与公式假设一致（如普通年金首笔在第1期末）。  
+   2. **增长率约束**：增长模型中必须满足 \( g < R \)，否则现值无意义。
+
+2. **动态现金流分析**  
+   1. **增长永续年金逻辑**：远期现金流现值趋近于零（因贴现因子指数衰减），总和收敛于有限值。
+
+3. **实际应用场景**  
+   1. **年金**：房贷月供、退休金储蓄、租赁合同。  
+   2. **永续年金**：永续债券、信托基金。  
+   3. **增长模型**：企业股息估值、薪资增长储蓄计划。
 
 ---
 
-#### **关键结论**
-1. **公式的适用条件**  
-   • **年金与永续年金**：现金流必须等额、定期，首次支付在**下一期**（若首笔支付在当期，需单独处理）。  
-   • **增长型现金流**：增长率 \( g \) 必须小于贴现率 \( R \)，否则现值公式发散（无意义）。
-
-2. **现实应用场景**  
-   • **年金**：房贷月供、退休储蓄计划、分期付款。  
-   • **增长型年金**：薪酬递增的储蓄策略、企业收入增长模型。  
-   • **永续年金**：永续债券、信托基金。  
-   • **增长型永续年金**：稳定增长的股息、长期租赁合约。
-
-3. **计算逻辑的本质**  
-   • **年金现值** = 各期贴现值的总和。  
-   • **永续年金现值** = 年金在 \( T \to \infty \) 时的极限（\( \frac{CF}{R} \)）。  
-   • **增长型永续年金** = 永续年金加入现金流增长后的调整。
-
-4. **公式的灵活运用**  
-   • 通过变形公式可求解其他变量（如 \( CF \)、\( R \)、\( T \)、\( g \)），例如：  
-     ◦ 已知现值和利率，反推每期还款额（房贷计算）。  
-     ◦ 已知终值和增长率，反推初始投资金额。
-
-5. **注意事项**  
-   • **时间单位一致性**：确保 \( R \)、\( g \)、\( T \) 的时间单位一致（如年利率对应年增长率和年期数）。  
-   • **公式误用风险**：盲目套用公式可能导致错误（如永续年金用于有限期现金流）。
+#### 关键结论
+1. **快捷公式的核心价值**：简化重复性现金流计算，避免逐期贴现/复利的繁琐过程。  
+2. **公式选择原则**：  
+   1. 根据现金流特性（等额/增长、有限/无限）匹配对应模型。  
+   2. 严格检查公式前提条件（如时间对齐、g<R）。  
+3. **灵活应用**：通过代数变形，可求解现金流（CF）、期数（T）、利率（R）或增长率（g）。
 
 ---
 
-#### **下一步学习方向**
-后续课程将结合贴现、复利与快捷公式，分析复杂金融工具（如债券定价、股票估值），并引入**净现值（NPV）**和**内部收益率（IRR）**等核心投资决策指标。掌握现金流建模的快捷方法是构建财务分析框架的基础。
+### 附录：字幕
 
-## Prompt
-
+```
 下面提供 Coursera Business Foundations 系列课程的第四课 Introduction to Corporate Finance 的视频 subtitle 及 slide，请用中文对该视频进行总结并提炼关键结论
 
 ## 模块标题：Week 1: Time Value of Money
@@ -149,3 +196,4 @@ All right. So let's summarize.
 We learned a couple of useful shortcuts today we talked about an annuity and it's present value formula. We talked about a perpetuity and it's present value formula. We talked about their growing cousins, the growing annuity and the growing perpetuity in the present value formula for those guys and while that might seem somewhat esoteric and bland or boring, we also discussed some of the applications that you might see in practice, these cash flow streams arising.
 
 And where these shortcuts are really useful, more than just finding the present value or the future value, is in finding the cash flow associated with the stream. So being able to manipulate these formulas is very important. And so in the problems, you're gonna spend some time in real life contexts, or at least as close to real life as we can get, manipulating these formulas. To derive certain aspects of interest, whether it's the cash flow, or the amount of time, or the discount rate, or the growth rate. All right, so, tackle the problem said, it really brings the material to life, but be very careful, that applying these formulas takes care. Don't blindly apply them to any setting because as we discussed, certain characteristics of the cash flows have to be met in order to, or certain requirements of the formula have to be met in order to use it. So good luck with the problems.
+```
