--- a/04. Introduction to Corporate Finance/Module 1 Time Value of Money/1.4 Taxes.md
+++ b/04. Introduction to Corporate Finance/Module 1 Time Value of Money/1.4 Taxes.md
@@ -1,53 +1,79 @@
-### 视频总结：Week 1 - 货币的时间价值（Time Value of Money）
+## Coursera 商业基础课程《企业财务导论》 - 模块1 - 货币的时间价值
 
-#### **核心概念**
+### 课程1.4 税收影响
+
+#### 1. 核心概念
 1. **税收对投资回报的影响**  
-   • **核心问题**：税收会减少投资的税后收益，需调整贴现率以反映税后回报率。  
-   • **税后贴现率（\( R_t \)）公式**：  
+   1. 税收通过减少利息收入或资本利得的实际收益，降低投资的**税后回报率**，进而影响现金流现值和未来值。  
+   2. **关键公式**：税后贴现率（\( R_t \)）计算：  
      \[
      R_t = R \times (1 - t)
      \]
-     其中，\( R \) = 税前贴现率，\( t \) = 税率。  
-   • **示例**：当税前贴现率 \( R=5\% \)，税率 \( t=35\% \)，税后贴现率 \( R_t = 5\% \times (1-0.35) = 3.25\% \)。
+     其中，\( R \) 为税前贴现率，\( t \) 为税率。
 
-2. **税收对现金流动态的影响**  
-   • **示例复现**：需存入更多初始资金以应对税收导致的利息收入减少。  
-     ◦ **税前**：提取未来4年每年$100需存入$354.60（贴现率5%）。  
-     ◦ **税后**：因利息收入被征税，需存入$369.50（税后贴现率3.25%），差额$14.90为税收的现值。
+2. **税后现金流的动态调整**  
+   1. 税收导致可用资金减少，需增加初始储蓄或调整现金流以满足目标提款需求。
 
-3. **税收对储蓄行为的实际影响**  
-   • **动态过程**：初始存款赚取利息后需缴纳利息税，导致可用资金减少。例如：  
-     ◦ 初始存入$369.50，首年利息$18.48（5%），缴税35%后净利息$12.01，账户余额$381.51，提取$100后剩余$281.51。  
-     ◦ 若无税收，剩余资金为$272.32（税前模型），税收导致可用资金减少$9.19。
+#### 2. 关键规则与操作
+
+1. **税后贴现率的使用**  
+   1. 在计算现值或未来值时，需将税前贴现率调整为税后贴现率。  
+   2. **步骤**：  
+      1. 确定税前贴现率（\( R \)）及税率（\( t \)）。  
+      2. 计算税后贴现率：\( R_t = R \times (1 - t) \)。  
+      3. 使用 \( R_t \) 进行现金流折现或复利计算。
+
+2. **税收对储蓄需求的影响**  
+   1. 税收减少投资的实际收益，需存入更多初始资金以维持相同的提款计划（见下文实例）。
+
+#### 3. 实例应用
+
+1. **税前与税后储蓄需求对比**  
+   1. **问题**：每年末提取\$100，持续4年（年利率5%，税率35%），当前需存入多少？  
+   2. **税前计算**（忽略税收）：  
+     \[
+     PV = \frac{100}{1.05} + \frac{100}{1.05^2} + \frac{100}{1.05^3} + \frac{100}{1.05^4} \approx 354.60
+     \]
+   3. **税后计算**（使用税后贴现率 \( R_t = 5\% \times (1 - 0.35) = 3.25\% \)）：  
+     \[
+     PV = \frac{100}{1.0325} + \frac{100}{1.0325^2} + \frac{100}{1.0325^3} + \frac{100}{1.0325^4} \approx 369.50
+     \]
+   4. **结论**：因税收影响，初始储蓄需从\$354.60增加至\$369.50，差额\$14.90为税收的现值。
+
+2. **动态现金流验证**  
+   1. **存入\$369.50后的账户动态**（年利率5%，税率35%）：  
+      1. **第1年末**：  
+       利息收入 = \( 369.50 \times 5\% = 18.48 \) → 税后利息 = \( 18.48 \times (1 - 0.35) = 12.01 \)  
+       余额 = \( 369.50 + 12.01 = 381.51 \) → 提款\$100 → 剩余\$281.51  
+      2. **后续年份**重复计算，最终第4年末余额归零，验证税后储蓄金额准确性。
+
+#### 4. 扩展理解
+
+1. **税收现值的计算**  
+   1. 税收导致的储蓄差额（\$14.90）等于税收现金流的现值（以税前贴现率5%计算）：  
+     \[
+     PV_{\text{税收}} = \sum_{t=1}^4 \frac{\text{第t年税负}}{1.05^t} = 14.90
+     \]
+
+2. **税率波动的影响**  
+   1. 税率随时间及政策变化（如历史最高达90%），需动态调整税后贴现率以反映实际税负。
+
+3. **多税种差异**  
+   1. 不同收入类型（股息、利息、资本利得）税率不同（如美国股息税率低于利息税率），需针对性调整贴现率。
 
 ---
 
-#### **关键结论**
-1. **税后贴现率的必要性**  
-   • 税收显著降低实际回报率，需使用税后贴现率计算现值，否则低估所需初始投资。  
-   • **公式应用**：税后贴现率 \( R_t = R \times (1 - t) \) 是调整税收影响的核心工具。
+#### 关键结论
 
-2. **税收对储蓄金额的影响**  
-   • 税收导致投资者需存入更多资金以满足未来现金流需求。示例中税收使初始储蓄增加$14.90（+4.2%）。  
-   • **差额解释**：$14.90为税收的现值（以5%贴现未来各期税款），验证了税收对现金流的长期侵蚀。
-
-3. **动态资金管理的现实挑战**  
-   • 税收通过减少每期利息收入，迫使投资者延长储蓄周期或提高初始投入。例如，税后模型中最后一期仅能提取$83.06，无法满足$100目标，需调整储蓄策略。
-
-4. **税收政策的财务决策影响**  
-   • 税率波动（如美国历史最高达90%）对长期投资规划构成风险，需在模型中纳入税率敏感性分析。  
-   • **实践意义**：高税率国家中，税收成为资本成本的重要组成部分，影响企业融资和个人理财决策。
-
-5. **全球税收环境的普遍性**  
-   • 欧美等高税率地区的税收影响尤为显著，忽略税收的财务模型将严重偏离实际结果。需在跨国投资中结合当地税制调整贴现率。
+1. **税收显著影响财务决策**：忽略税收将低估所需储蓄或高估投资回报，导致资金短缺风险。  
+2. **调整贴现率**：使用税后贴现率（而非名义利率）是准确评估税后现金流价值的关键。  
+3. **实际储蓄需求增加**：税收减少实际收益，需存入更多初始资金以满足未来提款目标。  
 
 ---
 
-#### **下一步学习方向**
-下一讲将探讨**通货膨胀对现金流和决策的影响**，分析名义利率与实际利率的转换，以及如何调整财务模型以反映购买力变化。税收与通胀的综合效应将进一步完善货币时间价值的分析框架。
+### 附录：字幕
 
-## Prompt
-
+```
 下面提供 Coursera Business Foundations 系列课程的第四课 Introduction to Corporate Finance 的视频 subtitle 及 slide，请用中文对该视频进行总结并提炼关键结论
 
 ## 模块标题：Week 1: Time Value of Money
@@ -99,3 +125,4 @@ So we can discount by this after-tax return to see how much money we're going to
 So looking ahead, I want you to dive into the problems, work on the problem set.
 
 And then we're going to look at inflation and investigate how inflation affects our cash flow stream and our decision making. Thank you and I look forward to seeing you in the next class.
+```
