--- a/04. Introduction to Corporate Finance/Module 2 Interest Rates/2.1 Inflation.md
+++ b/04. Introduction to Corporate Finance/Module 2 Interest Rates/2.1 Inflation.md
@@ -1,60 +1,89 @@
-### 视频总结：Week 2 - 利率（Interest Rates）
+## Coursera 商业基础课程《企业财务导论》 - 模块2 - 利率
 
-#### **核心概念**
-1. **通货膨胀对投资回报的影响**  
-   • **名义利率（Nominal Rate）**：未调整通胀的回报率（如5%）。  
-   • **实际利率（Real Rate）**：剔除通胀后的真实回报率，反映购买力变化。  
-   • **实际利率公式**：  
+### 课程2.1 通货膨胀
+
+
+
+#### 1. 核心概念
+
+1. **名义利率（Nominal Rate）与实际利率（Real Rate）**  
+   1. **名义利率**：未调整通胀的利率（如账户标明的5%年利率）。  
+   2. **实际利率**：扣除通胀后的真实购买力增长率，计算公式：  
      \[
-     1 + R_{\text{real}} = \frac{1 + R_{\text{nominal}}}{1 + \pi} \quad \text{或近似为} \quad R_{\text{real}} \approx R_{\text{nominal}} - \pi
+     1 + R_{\text{实际}} = \frac{1 + R_{\text{名义}}}{1 + \pi} \quad \text{或近似为} \quad R_{\text{实际}} \approx R_{\text{名义}} - \pi
      \]
-     其中，\( \pi \) = 预期通胀率（如2.5%）。  
-   • **示例**：名义利率5%、通胀率2.5%时，实际利率≈2.44%。
+     其中，\( \pi \) 为预期通胀率。  
+   3. **示例**：名义利率5%，通胀率2.5% → 实际利率≈2.44%。
 
-2. **名义现金流与真实现金流**  
-   • **名义现金流**：未调整通胀的金额（如每年提取$100）。  
-   • **真实现金流**：根据通胀调整后的金额，保持购买力恒定（如每年提取额增长2.5%）。  
-   • **贴现规则**：  
-     ◦ 名义现金流用名义利率贴现。  
-     ◦ 真实现金流用实际利率贴现。两者现值等价。
+2. **通胀对购买力的影响**  
+   1. 通胀不改变账户中的**名义金额**，但降低资金的**实际购买力**（如\$100未来能购买的商品减少）。  
+   2. **应对策略**：提款金额需随通胀增长以维持购买力。
 
-3. **通胀对储蓄策略的影响**  
-   • **保持购买力的提款策略**：若通胀率2.5%，需每年提款额按2.5%增长（如首年$100，次年$102.5）。  
-   • **动态调整示例**：初始存入$376.75（名义利率5%），每年提款额按通胀增长，4年后账户余额归零。
+#### 2.关键规则与操作
+
+1. **现金流调整方法**  
+   1.  **目标**：确保未来提款的实际购买力不变。  
+   2. **步骤**：  
+      1. **名义现金流**：每年提款额按通胀率（\( \pi \)）递增（如首年\$100，次年\$102.5，依此类推）。  
+      2. **贴现率选择**：名义现金流使用名义利率（\( R_{\text{名义}} \)）折现，实际现金流使用实际利率（\( R_{\text{实际}} \)）折现。  
+     \[
+     PV_{\text{名义}} = \sum_{t=1}^T \frac{CF_t \times (1+\pi)^{t-1}}{(1 + R_{\text{名义}})^t} \quad \text{或} \quad PV_{\text{实际}} = \sum_{t=1}^T \frac{CF_{\text{实际}}}{(1 + R_{\text{实际}})^t}
+     \]
+   3. **结果一致性**：两种方法现值相等（通胀在分子与分母中抵消）。
+
+2. **动态储蓄与提款验证**  
+   1. **初始储蓄调整**：考虑通胀后，需增加初始存款以满足实际购买力需求。  
+   2. **示例**：原需存入\$354.60（无通胀），考虑2.5%通胀后需存入\$376.75，提款额每年增长2.5%。
+
+#### 3. 实例应用
+
+1. **通胀调整后的储蓄需求计算**  
+   1. **问题**：每年提取实际购买力相当于当前\$100的资金，持续4年（名义利率5%，通胀率2.5%），当前需存入多少？  
+   2. **步骤**：  
+      1. **名义提款额**：第1年\$100，第2年\$102.5，第3年\$105.06，第4年\$107.69。  
+      2. **现值计算**（名义利率5%）：  
+        \[
+        PV = \frac{100}{1.05} + \frac{102.5}{1.05^2} + \frac{105.06}{1.05^3} + \frac{107.69}{1.05^4} \approx 376.75
+        \]
+   3. **结论**：当前需存入\$376.75，以支持通胀调整后的提款计划。
+
+2. **账户动态验证**  
+   1. **存入\$376.75后的提款过程**：  
+      1. **第1年末**：  
+       余额 = \( 376.75 \times 1.05 = 395.59 \) → 提款$100 → 剩余$295.59  
+      2. **第2年末**：  
+       余额 = \( 295.59 \times 1.05 = 310.37 \) → 提款$102.5 → 剩余$207.87  
+      3. **后续年份**重复计算，第4年末余额归零，验证模型准确性。
+
+#### 4. 扩展理解
+
+1. **通胀与税收的叠加影响**  
+   1. **综合调整**：若同时考虑税收与通胀，需分步处理：  
+      1. 计算税后名义利率（\( R_{\text{税后}} = R_{\text{名义}} \times (1 - t) \)）。  
+      2. 根据税后名义利率计算实际利率（\( R_{\text{实际}} = \frac{R_{\text{税后}}}{1 + \pi} \)）。  
+      3. 调整提款现金流以匹配实际购买力。
+
+2. **全球通胀差异**  
+   1. 高通胀国家（如阿根廷、土耳其）需使用更高的实际利率调整模型，避免储蓄计划严重偏离实际需求。
 
 ---
 
-#### **关键结论**
-1. **通胀不改变名义金额，但侵蚀购买力**  
-   • 名义利率仅反映账户金额增长，实际利率反映购买力增长。  
-   • 示例：名义提款$100在通胀下购买力逐年下降，需调整提款策略。
+#### 关键结论
 
-2. **实际利率是决策的核心依据**  
-   • 长期储蓄或投资规划需基于实际利率（而非名义利率），以维持消费能力。  
-   • **公式应用**：实际利率 ≈ 名义利率 - 通胀率（高通胀国家需显著调整）。
-
-3. **现金流调整的必要性**  
-   • 若提款金额固定（名义现金流），需更多初始储蓄（如$376.75 vs 原$354.60）。  
-   • 若提款金额随通胀增长（真实现金流），初始储蓄相同，但提款额逐年递增以匹配购买力。
-
-4. **名义与真实贴现的等价性**  
-   • 名义现金流按名义利率贴现 = 真实现金流按实际利率贴现。  
-   • **验证示例**：  
-     ◦ 名义提款$100（名义利率5%）现值$376.75。  
-     ◦ 真实提款（增长2.5%）按实际利率2.44%贴现，现值相同。
-
-5. **全球通胀差异的实践意义**  
-   • 新兴市场高通胀（如10%）需大幅提高名义提款额，或选择通胀挂钩资产（如TIPS债券）。  
-   • 忽略通胀将导致储蓄计划严重偏离实际需求（如退休金不足）。
+1. **通胀的核心影响**：降低资金购买力，需通过调整提款现金流或初始储蓄维持实际消费能力。  
+2. **名义与实际利率的关系**：  
+    1. 实际利率反映真实财富增长，是财务决策的核心依据。  
+    2. 高通胀环境下，名义利率可能虚高，实际利率可能为负（如名义利率5%，通胀率6% → 实际利率-0.94%）。  
+3. **财务规划原则**：  
+    1. 长期储蓄或退休计划必须纳入通胀预期。  
+    2. 现金流与贴现率需匹配（名义现金流配名义利率，实际现金流配实际利率）。
 
 ---
 
-#### **下一步学习方向**
-后续课程将探讨**非均匀现金流与不同复利周期**的估值方法，结合实际利率与名义利率的转换，构建复杂财务场景的分析模型。掌握通胀调整是理解跨国投资和长期理财规划的基础。
+### 附录：字幕
 
-## Prompt
-
-下面提供 Coursera Business Foundations 系列课程的第四课 Introduction to Corporate Finance 的视频 subtitle 及 slide，请用中文对该视频进行总结并提炼关键结论
+```
+下面提供 Coursera Business Foundations 系列课程的第四课 Introduction to Corporate Finance 的视频 subtitle 及 slide，请用中文对该视频小节进行总结并提炼关键结论
 
 ## 模块标题: Week 2: Interest Rates
 
@@ -79,3 +108,4 @@ If we take the present value of these nominal dollars at the nominal discount ra
 Keep that in mind it's important to emphasize that. The present value of nominal cash flows at the nominal discount rate. That's going to equal the present value of the real cash flows at the real rate. Remember that when we were withdrawing $100 each year. But we discounted these at the real rate of return, which I think was 2.44 percent, we got $376.75. All that's going on is that the inflation term in the numerator and denominator of the real computations they're canceling one another. Let's go back to our savings account. We insert the $376.75, we're now going to withdraw money that's growing at a rate of 2.5 percent per year to keep up with inflation. But our money in the account is earning the nominal rate of return of 5 percent. What happens is we exactly exhaust our funds at the end of four years, and we've been able to do so by increasing our withdrawals each year to keep up with inflation.
 
 Let's summarize this. Inflation does not affect dollar returns. It's not affecting the money in the bank account or the rate at which it's growing. What it's affecting is the purchasing power of that money. When I pull it out and go buy something, I can buy less of that good or that service with that same dollar year after a year after year when we face inflation. We introduced the idea of a real rate of return that takes into account the effects of inflation. Next time, we're going to turn to a new topic, interest rates and we're going to build on what we've already learned to understand how to discount and value cash flow streams that don't happen every year that are irregular in their timing, and how to deal with different compounding periods as opposed to annual compounding, which is what we've implicitly been doing all along this far. I look forward to seeing you next time. Thanks.
+```
